# claude-gcp

./: .gitignore  001_claude_api.ipynb  002_prompt_evals.ipynb  003_prompting.ipynb  004_tools.ipynb  006_001_extended_thinking.ipynb  006_002_images.ipynb  006_003_caching.ipynb  dataset.json  output.html  readme.md
.github/workflows/: ruff.yaml.yml  ruff.yml
001_claude_api/: 001_claude_api.ipynb
003_prompting/: dataset_meals.json  dataset_topics.json  output.json
004_tools/: 004_tools.ipynb
005_rag/: 001_chunking.ipynb  002_embeddings.ipynb  003_vectordb.ipynb  004_bm25.ipynb  005_hybrid.ipynb  006_reranking.ipynb
006_images/: 006_001_extended_thinking.ipynb  006_002_images.ipynb  006_003_caching.ipynb
007_mcp/: 001_mcp.ipynb  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml  pyrightconfig.json
007_mcp/core/: chat.py  claude.py  cli_chat.py  tools.py
